--- a/index.html
+++ b/index.html
@@ -1,59 +1,125 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="NexaVision is a cutting-edge digital marketing agency delivering strategic growth solutions.">
-    <title>NexaVision - Digital Marketing Agency</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f4f9;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #1f2937;
-            color: white;
-            padding: 2rem;
-            text-align: center;
-        }
-        main {
-            padding: 2rem;
-            max-width: 800px;
-            margin: auto;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background: #111827;
-            color: white;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="NexaVision - Digital Marketing & Creative Agency" />
+  <title>NexaVision Agency</title>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Manrope', sans-serif;
+    }
+
+    body {
+      background: linear-gradient(to bottom, #0f172a, #1e293b);
+      color: #fff;
+      line-height: 1.6;
+    }
+
+    header {
+      padding: 60px 20px;
+      text-align: center;
+      background: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d') no-repeat center/cover;
+      background-blend-mode: multiply;
+      background-color: #1e293b;
+    }
+
+    header h1 {
+      font-size: 48px;
+      font-weight: 800;
+      color: #fff;
+    }
+
+    header p {
+      font-size: 18px;
+      margin-top: 10px;
+      color: #cbd5e1;
+    }
+
+    section {
+      max-width: 960px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    h2 {
+      font-size: 28px;
+      margin-bottom: 16px;
+      color: #93c5fd;
+    }
+
+    .services ul,
+    .team ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .services li,
+    .team li {
+      background: #334155;
+      padding: 16px;
+      margin-bottom: 12px;
+      border-radius: 12px;
+    }
+
+    footer {
+      background: #0f172a;
+      text-align: center;
+      padding: 30px 20px;
+      font-size: 14px;
+      color: #94a3b8;
+      margin-top: 40px;
+    }
+  </style>
 </head>
+
 <body>
-    <header>
-        <h1>NexaVision</h1>
-        <p>Strategic Digital Marketing for Visionary Brands</p>
-    </header>
-    <main>
-        <h2>About Us</h2>
-        <p>NexaVision is a results-driven digital marketing agency that helps brands reach their full potential through creative strategy, data-driven marketing, and innovative technology.</p>
-        <h2>Services</h2>
-        <ul>
-            <li>SEO & SEM</li>
-            <li>Social Media Marketing</li>
-            <li>Performance Analytics</li>
-            <li>Content Strategy</li>
-        </ul>
-        <h2>Contact Information</h2>
-        <p><strong>Email:</strong> info@nexavision.online</p>
-        <p><strong>Phone:</strong> +1 (312) 555-0478</p>
-        <p><strong>Address:</strong> 121 W Wacker Dr, Suite 300, Chicago, IL 60601</p>
-    </main>
-    <footer>
-        &copy; 2025 NexaVision. All rights reserved.
-    </footer>
+  <header>
+    <h1>NexaVision Agency</h1>
+    <p>Creative Digital Solutions for Modern Businesses</p>
+  </header>
+
+  <section class="about">
+    <h2>About Us</h2>
+    <p>NexaVision is a Ukrainian-based marketing agency delivering powerful branding, digital strategy, and advertising services for businesses of all sizes. We focus on innovation and measurable results.</p>
+  </section>
+
+  <section class="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Performance Marketing & Targeted Ads</li>
+      <li>Website & E-commerce Development</li>
+      <li>Brand Identity & Design</li>
+      <li>Social Media Strategy</li>
+      <li>SEO & Analytics</li>
+    </ul>
+  </section>
+
+  <section class="team">
+    <h2>Meet the Team</h2>
+    <ul>
+      <li><strong>Olena Shevchenko</strong> – CEO & Founder</li>
+      <li><strong>Dmytro Koval</strong> – Head of Digital</li>
+      <li><strong>Iryna Melnyk</strong> – Creative Director</li>
+      <li><strong>Serhii Bondarenko</strong> – Lead Developer</li>
+    </ul>
+  </section>
+
+  <section class="contacts">
+    <h2>Contact Us</h2>
+    <p>Email: info@nexavision.online</p>
+    <p>Phone: +38 068 000 0000</p>
+    <p>Address: Kyiv, Ukraine</p>
+  </section>
+
+  <footer>
+    &copy; 2025 NexaVision. All rights reserved.
+  </footer>
 </body>
+
 </html>
