--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- Facebook domain verification -->
+    <meta name="facebook-domain-verification" content="5gvg8423rkrrdovoci89jdrhjvt1wl" />
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Nexavision | Маркетингове агенство в Україні">
     <meta property="og:description" content="Комплексний маркетинг, SMM та брендинг для вашого бізнесу. Розвиваємо бренди з 2020 року.">
