--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
             <div class="footer-grid">
                 <div>
                     <h3>Контакти</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Київ, вул. Хрещатик, 15</p>
-                    <p><i class="fas fa-phone"></i> +380 95 506 7461</p>
+                    <p><i class="fas fa-map-marker-alt"></i> 01001, м. Київ, вул. Хрещатик, буд. 15</p>
+                    <p><i class="fas fa-phone"></i> +380634332248</p>
                     <p><i class="fas fa-envelope"></i> info@nexavision.online</p>
                 </div>
                 <div>
